tests/ui/assumptions_on_binders/alias_outlives.stderr
error: higher-ranked lifetime bound could not be satisfied
  --> $DIR/alias_outlives.rs:37:1
   |
LL | const REGIONCK_ENV_FAIL<'a, T: AliasHaver>: ReqTrait<T::Assoc> = todo!()
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: higher-ranked lifetime bound could not be satisfied
  --> $DIR/alias_outlives.rs:25:1
   |
LL | / fn borrowck_env_fail<'a, T: AliasHaver>()
LL | |
LL | | where
LL | |     <T as AliasHaver>::Assoc: 'a,
   | |_________________________________^

error: aborting due to 2 previous errors
